--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.1.0",
+    "expo-blur": "~13.0.2",
+    "expo-linear-gradient": "~13.0.2",
+    "@expo/vector-icons": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
